フォーム機能追加

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>送信ありがとうございます</h1>
+    <p>入力情報をご確認ください．</p>
     <p><strong>氏名：</strong> <span th:text="${name}"></span></p>
     <p><strong>メッセージ：</strong> <span th:text="${message}"></span></p>
 </body>
